<resources>
    <string name="app_name">GSC Training Tracker</string>
    <string name="report_details_label">Today\'s Details</string>
    <string name="report_photo_button_description">Take photo</string>
    <string name="report_photo_no_image_description">Report photo (not set)</string>
    <string name="report_photo_image_description">Report photo (set)</string>
    <string name="date">DATE: %1$s</string>
    <string name="new_report">New Report</string>
    <string name="report_client_text">Choose Client</string>
    <string name="report_report_text">Send Report</string>
    <string name="report_report_client">Client name.</string>
    <string name="report_report_subject">Ben\'s Fitness App Report</string>
    <string name="send_report">Send Report</string>
    <string name="show_subtitle">subtitle</string>
    <string name="date_greeting">Hi, %s!</string>
    <string name="select_date">Select workout date to report a new workout or to view an existing report:</string>
    <string name="add_phone">Phone Number</string>

    <string name="add_email">Email</string>
    <string name="add_new_client">Add New Client</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="clientName">%1$s</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="age">Age</string>
    <string name="gender">GENDER: %1$s</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="birthday">BIRTHDAY: %1$s</string>
    <string name="etBirthDate">Birth Date</string>
    <string name="etGender">Gender</string>
    <string name="weight">Weight</string>

    <string name="isAdminAdmin">Admin</string>
    <string name="isAdminUser">User</string>
    <string name="toDatePicker">To Client Calendar</string>

    <string name="swipe_info1">Swipe left for nutrition</string>
    <string name="swipe_info2">Swipe right for workout</string>
    <string name="enter_weight">Enter Today\'s Weight:</string>
    <string name="exercises">Today\'s workout:</string>
    <string name="exercise_num">Exercise 1:</string>
    <string name="workout_weight">Weight:</string>
    <string name="comments">Enter comments</string>

    <string name="nutrition">Today\'s nutrition:</string>
    <string name="meal_num">Meal 1:</string>
    <string name="calories">Calories:</string>
    <string name="fats">Amount of fat in grams:</string>
    <string name="carbs">Amount of carbs in grams:</string>
    <string name="protein">Amount of protein in grams:</string>
    <string name="send">\Send Report\</string>
    <string name="date_admin_greeting">Hi, Ben!</string>
    <string name="update">\"Update Report\"</string>
    <string name="inbox">Inbox</string>
    <string name="addUpdate">Add/Update</string>
    <string name="admin_weight">Today\'s Weight:</string>
    <string name="reply">Reply</string>
    <string name="select_user">Select User</string>
    <string name="select">Select</string>
    <string name="register_new">Register New User</string>
    <string name="selectWorkout">Select Workout</string>
    <string name="selectReport">Select Report</string>
    <string name="exercise">Exercise:</string>
    <string name="auth_failed">Authentifcation failed</string>
    <string name="enterDay">Enter Workout Day</string>
    <string name="viewProfile">View Profile</string>
    <string name="addExercise1">Add 1 Exercise</string>
    <string name="addExercise3">Add 3 Exercises</string>
    <string name="addExercise5">Add 5 Exercises</string>
    <string name="exercise1">Exercise 1:</string>
    <string name="exercise2">Exercise 2:</string>
    <string name="exercise3">Exercise 3:</string>
    <string name="exercise4">Exercise 4:</string>
    <string name="exercise5">Exercise 5:</string>
    <string name="toWorkoutList">To Workout List</string>
    <string name="delete_workout">Delete Workout</string>
    <string name="update_workout">Update Workout</string>
    <string name="exercise_weight">Enter Weight</string>
    <string name="enterWorkoutTitle">Enter New Workout Title</string>
    <string name="enterReps">Enter Reps</string>
    <string name="enterName">Enter Name</string>
    <string name="addWorkout">Create New Workout</string>
    <string name="writeWorkouts">Write Workout</string>
    <string name="workoutContains">This workout contains the following exercises.</string>
    <string name="error_weak_password">Password must be six characters long.</string>
    <string name="enter_exercise_name">Enter Exercise Name</string>
    <string name="enter_reps">Enter Reps</string>
    <string name="comments_view">Comments:</string>
    <string name="workout_instructions">Want to create a new workout for this client?</string>
    <string name="editWorkoutTitle">Edit This Workout: </string>
    <string name="toReportList">TO REPORT LIST</string>

</resources>
