<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <ImageView
        android:id="@+id/client_photo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/report_photo_no_image_description"
        android:cropToPadding="true"
        android:focusable="true"
        android:scaleType="centerInside" />

    <TextView
        android:id="@+id/client_name"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/client_photo"
        android:text="@string/clientName"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tvDate"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/client_name"
        android:layout_toRightOf="@id/client_photo"
        android:text="@string/date"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/separator1"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_weight"
        android:layout_below="@id/client_photo"/>

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_toRightOf="@id/separator1"
        android:layout_alignBaseline="@id/separator1"/>

    <TextView
        android:id="@+id/separator2"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercises"
        android:layout_below="@id/etWeight"/>

    <TextView
        android:id="@+id/exercise_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_num"
        android:layout_below="@+id/separator2"/>

    <EditText
        android:id="@+id/etExerciseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_toRightOf="@id/exercise_name_text"
        android:layout_alignBottom="@id/exercise_name_text"/>

    <TextView
        android:id="@+id/reps_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reps"
        android:layout_below="@id/exercise_name_text"/>

    <EditText
        android:id="@+id/etRepsEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_toRightOf="@id/reps_text"
        android:layout_alignBottom="@id/reps_text"/>

    <TextView
        android:id="@+id/weight_used_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workout_weight"
        android:layout_below="@id/reps_text"/>

    <EditText
        android:id="@+id/etWeightUsedEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/weight_used_text"
        android:layout_alignBottom="@id/weight_used_text"/>

    <EditText
        android:id="@+id/etWorkoutComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/comments"
        android:layout_below="@id/weight_used_text" />

    <Button
        android:id="@+id/bSendReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_below="@id/etWorkoutComments"
        android:text="@string/report_report_text" />

    <TextView
        android:id="@+id/swipe_info"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swipe_info1"
        android:layout_below="@id/bSendReport"/>

</RelativeLayout>