<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <ImageView
        android:id="@+id/client_photo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/report_photo_no_image_description"
        android:cropToPadding="true"
        android:focusable="true"
        android:scaleType="centerInside" />

    <TextView
        android:id="@+id/client_name"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/client_photo"
        android:text="@string/clientName"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tvDate"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/client_name"
        android:layout_toRightOf="@id/client_photo"
        android:text="@string/date"
        android:textSize="18sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rvNutrition"
        tools:listitem="@layout/rvnutrition_item"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bAddMeal"/>

    <TextView
        android:id="@+id/nutrition_text"
        style="?android:listSeparatorTextViewStyle"
        android:layout_below="@+id/client_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nutrition"/>

    <TextView
        android:id="@+id/tvMealItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nutrition_text"
        android:text="@string/meal_num"/>

    <EditText
        android:id="@+id/etMealItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tvMealItem"
        android:layout_alignBottom="@id/tvMealItem"/>

    <TextView
        android:id="@+id/tvCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvMealItem"
        android:text="@string/calories"/>

    <EditText
        android:id="@+id/etCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tvCalories"
        android:layout_alignBottom="@id/tvCalories"/>

    <TextView
        android:id="@+id/tvFat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCalories"
        android:text="@string/fats"/>

    <EditText
        android:id="@+id/etFat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tvFat"
        android:layout_alignBottom="@id/tvFat"/>

    <TextView
        android:id="@+id/tvCarbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvFat"
        android:text="@string/carbs"/>

    <EditText
        android:id="@+id/etCarbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tvCarbs"
        android:layout_alignBottom="@id/tvCarbs"/>

    <TextView
        android:id="@+id/tvProtein"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCarbs"
        android:text="@string/protein"/>

    <EditText
        android:id="@+id/etProtein"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tvProtein"
        android:layout_alignBottom="@id/tvProtein"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTotals"
        android:text="hi"
        android:layout_below="@id/etProtein"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTotalCalories"
        android:layout_below="@id/tvTotals"
        android:text="hi"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTotalFat"
        android:layout_below="@id/tvTotalCalories"
        android:text="hi"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTotalCarbs"
        android:layout_below="@id/tvTotalFat"
        android:text="hi"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTotalProtein"
        android:layout_below="@id/tvTotalCarbs"
        android:text="hi"/>

    <Button
        android:id="@+id/report_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_below="@id/tvTotalProtein"
        android:text="@string/report_report_text" />

    <TextView
        android:id="@+id/swipe_info"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swipe_info2"
        android:layout_below="@id/report_report"/>

</RelativeLayout>