<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
    <variable
        name="email"
        type="String" />
    <variable
        name="password"
        type="String" />
    <variable
        name="bLogin"
        type="android.widget.Button" />
    <variable
        name="bRegister"
        type="android.widget.Button" />
    <variable
        name="etPassword"
        type="android.widget.EditText" />
    <variable
        name="etEmail"
        type="android.widget.EditText"/>
    <variable
        name="fragment"
        type="zachg.gsctrainingandnutritiontracker.ui.fragments.LoginFragment" />
    <variable
        name="user"
        type="zachg.gsctrainingandnutritiontracker.models.User" />
     <variable
         name="model"
         type="zachg.gsctrainingandnutritiontracker.viewmodels.LoginViewModel" />
        <variable
            name="handlers"
            type="zachg.gsctrainingandnutritiontracker.viewmodels.LoginViewModel.ClickHandlers" />
</data>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@={email}"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/bLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:onClick="@{handlers::onClickLogIn}"/>

    <Button
        android:id="@+id/bRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:onClick="@{() -> fragment.goToRegister()}" />

</LinearLayout>
</layout>