<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="client"
            type="zachg.gsctrainingandnutritiontracker.models.User"/>
        <variable
            name="fragment"
            type="zachg.gsctrainingandnutritiontracker.fragments.AdminUpdateWorkoutFragment"/>
        <variable
            name="workout"
            type="zachg.gsctrainingandnutritiontracker.models.Workout"/>
        <variable
            name="model"
            type="zachg.gsctrainingandnutritiontracker.viewmodels.AdminUpdateWorkoutViewModel" />
        <variable
            name="user"
            type="zachg.gsctrainingandnutritiontracker.models.User"/>
        <variable
            name="viewmodel"
            type="zachg.gsctrainingandnutritiontracker.viewmodels.AdminClientProfileViewModel"/>
        <variable
            name="bCamera"
            type="android.widget.ImageButton"/>
        <variable
            name="profilePhoto"
            type="android.widget.ImageView"/>
        <variable
            name="bAddExercise"
            type="android.widget.Button" />
    </data>


    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#525252">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <TextView
            android:id="@+id/workoutTitleEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/editWorkoutTitle"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_below="@id/toolbar"/>

    <EditText
        android:id="@+id/tvWorkoutTitle"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/workoutTitleEdit"
        android:background="#545454"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:text="@={workout.workoutTitle}"
        android:hint="@{workout.workoutTitle}"
        android:textColorHint="@color/white"/>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_exercise_list"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_below="@id/tvWorkoutTitle">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvExercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                tools:listitem="@layout/rv_exercise_item" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="#525252"
            android:layout_below="@id/layout_exercise_list">

            <Button
                android:id="@+id/bAddExercise1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="#696969"
                android:layout_margin="1dp"
                android:onClick="@{()->fragment.addOne()}"
                android:text="@string/addExercise1"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/bAddExercise3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="#696969"
                android:layout_margin="1dp"
                android:onClick="@{()->fragment.addThree()}"
                android:text="@string/addExercise3"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/bAddExercise5"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="#696969"
                android:layout_margin="1dp"
                android:onClick="@{()->fragment.addFive()}"
                android:text="@string/addExercise5"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <Button
            android:id="@+id/bUpdateWorkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_workout"
            android:clickable="true"
            android:background="#696969"
            android:layout_below="@id/buttonLayout"
            android:layout_margin="1dp"
            android:onClick="@{()->fragment.validateWorkout(client, workout)}"/>

        <Button
            android:id="@+id/bDeleteWorkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_workout"
            android:clickable="true"
            android:background="#696969"
            android:layout_below="@id/bUpdateWorkout"
            android:onClick="@{()->fragment.deleteWorkout(client, workout)}" />

    </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</layout>