<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:margin="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <variable
            name="user"
            type="zachg.gsctrainingandnutritiontracker.models.User"/>
        <variable
            name="client"
            type="zachg.gsctrainingandnutritiontracker.models.User"/>
        <variable
            name="fragment"
            type="zachg.gsctrainingandnutritiontracker.fragments.AdminClientProfileFragment"/>
        <variable
            name="workout"
            type="zachg.gsctrainingandnutritiontracker.models.Workout"/>
        <variable
            name="viewmodel"
            type="zachg.gsctrainingandnutritiontracker.viewmodels.AdminClientProfileViewModel"/>
        <variable
            name="bCamera"
            type="android.widget.ImageButton"/>
        <variable
            name="profilePhoto"
            type="android.widget.ImageView"/>
        <variable
            name="bAddExercise"
            type="android.widget.Button" />
    </data>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#525252">

        <TextView
            android:textColor="@android:color/white"
            android:id="@+id/tvClientName"
            android:text="@{client.clientName}"
            android:layout_width="match_parent"
            android:layout_toEndOf="@id/profilePhotoImageView"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/profilePhotoImageView"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/profilePhotoImageView"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:background="@android:color/darker_gray" />

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/cameraImageButton"
                android:clickable="true"
                android:layout_alignBottom="@id/bToWorkoutList"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:background="#696969"
                android:src="@android:drawable/ic_menu_camera"
                android:layout_below="@id/profilePhotoImageView"/>

        <Button
            android:id="@+id/bToDatePicker"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/profilePhotoImageView"
            android:layout_below="@id/tvClientName"
            android:background="#696969"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:onClick="@{()->fragment.toDatePicker(user, client)}"
            android:text="@string/toDatePicker"
            android:textColor="@android:color/white"
            android:layout_margin="1dp"/>

        <Button
            android:id="@+id/bToWorkoutList"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/profilePhotoImageView"
            android:layout_below="@id/bToDatePicker"
            android:background="#696969"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:onClick="@{()->fragment.toWorkoutList(user, client)}"
            android:text="@string/toWorkoutList"
            android:textColor="@android:color/white"
            android:layout_margin="1dp"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/bCreateNewWorkout"
            android:text="@string/addWorkout"
            android:textSize="24dp"
            android:layout_below="@id/bToWorkoutList"
            android:onClick="()->fragment.addNewWorkout()"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/newWorkoutLayout">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layout_exercise_list"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_below="@id/bCreateNewWorkout">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvExercise"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"
                tools:listitem="@layout/rv_exercise_item" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

            <Button
                android:id="@+id/bAddExercise1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="#696969"
                android:layout_margin="1dp"
                android:onClick="@{()->fragment.addOne()}"
                android:text="@string/addExercise1"
                android:textColor="@android:color/white" />

        <Button
            android:id="@+id/bAddExercise3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="#696969"
            android:layout_margin="1dp"
            android:onClick="@{()->fragment.addThree()}"
            android:text="@string/addExercise3"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/bAddExercise5"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="#696969"
            android:layout_margin="1dp"
            android:onClick="@{()->fragment.addFive()}"
            android:text="@string/addExercise5"
            android:textColor="@android:color/white" />

        </LinearLayout>

        <Button
            android:background="#696969"
            android:textColor="@android:color/white"
            android:id="@+id/bWriteWorkouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/writeWorkouts"
            android:layout_below="@id/newWorkoutLayout"
            android:layout_margin="1dp"
            android:onClick="@{()->viewmodel.nullWorkoutTitleCheck(client, workout)}"/>

    </RelativeLayout>
    </ScrollView>

</layout>